# dsk

./: .bumpversion.toml  .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/workflows/: ci-checks.yml  lint.yml  test.yml
DSUtils/: data.py  plots.py
DSUtils.egg-info/: PKG-INFO  SOURCES.txt
notebooks/: Untitled.ipynb  data.ipynb  plots.ipynb  test_data.ipynb
scripts/: version.py
src/dsk/: __init__.py  data.py
src/dsutils/: data.py  plots.py
tests/: test_data.py
tests/dsk/: test_data.py  test_plots.py
tests/dsutils/: test_data.py  test_plots.py
